<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorControlHighlight">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="30sp"
            android:typeface="sans"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:layout_weight="0.72"
            android:textColor="@android:color/holo_orange_dark" />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnC"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"
            android:textColor="@android:color/holo_red_light" />
        <Button
            android:id="@+id/btnpi"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnpi"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"
            android:textAlignment="center" />
        <Button
            android:id="@+id/btnsqrt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnsqrt"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btncube"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btncube"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnDiv"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnMul"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnAdd"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="@string/btn0"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btndot"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btndot"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnSub"
            android:background="?attr/colorControlHighlight"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnEqu"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/btnEqu"
            android:background="?android:attr/colorActivatedHighlight"
            android:textSize="24sp"/>
    </LinearLayout>
</LinearLayout>